--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@
   src: url("./assets/fonts/PantonDemoBlack.woff") format("woff");
   font-weight: bold;
   font-style: normal;
+  font-display: swap;
 }
 
 body {
