--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,9 @@
 }
 
 body {
-  width: 100vw;
+  height: 100%;
   font-family: montserrat, sans-serif;
+}
+::-webkit-scrollbar {
+  display: none;
 }
